@@ -20,7 +20,7 @@
    </sizepolicy>
   </property>
   <property name="windowTitle">
-   <string>Version Creator - oyProjectManager</string>
+   <string>Version Creator - Stalker</string>
   </property>
   <property name="sizeGripEnabled">
    <bool>true</bool>
